# c-playground

./: .gitignore  CMakeLists.txt  StringBuilder.cpp  StringToVector.cpp  macro.h  naive_function.cpp  noncopyable.h  raii.h  virtual-dispatcher.cpp
algorithm/: min-element.cpp  sort.cpp
boost/: regex-conditional.cpp  timer.cpp
builtin/: ctz.c  popcount.c  return-address.c
class/: access_private_method.cpp  align.c  diamond-problem.cpp  dynamic-cast.cpp  empty-struct.c  empty-struct.cpp  enum.cpp  function-compare.cpp  heap-only.cpp  lockguard.cpp  naive_function.cpp  non-virtual-override.cpp  noncopyable.h  object_wrapper.cpp  override-operator.cpp  override.cpp  override_new.cpp  reference.cpp  string.cpp  tuple.cpp  union-dump.cpp  union-string.cpp  virtual-dispatcher.cpp  virtual-override.cpp  virtual-table.cpp
codec/: base64.c  clip_varchar.c
container/: blocking-queue.cpp  heap.cpp  multimap.cpp  set.cpp  unordered_set.cpp  vector.cpp
coroutine/: schedule.cpp  task-switch.c  ucontext.c
crc/: crc16.c  crc16.h
crosscompile/: CMakeLists.txt  test.cpp  test.h
db/: mysql-connector.cpp
design_pattern/producer_and_consumer/1vs1/: CMakeLists.txt  build.sh  main.cpp
feature/: cpp11-ref-qualified-member-function.cpp  cpp11-user-defined-literals.cpp  cpp14-binary-literals.cpp  cpp14-decltype-auto.cpp  cpp14-lambda-capture-initializers.cpp  cpp17-fold-expression.cpp  cpp17_optional.cpp
feature/cpp11/: raw_string.cpp
functional/: compose.cpp  curry.cpp  for-each.h  functor_size.cpp  is-detected.h  partial.cpp
gcc/: asm-m32-classic-interrupt.c  asm-m32-sysenter.c  asm-m64-syscall.c  packed.c  x64-code-model.c
gdb/: debug-callee-stack.txt  sample.c
io/: .gitignore  filelock.cpp  fts.c  insert-timestamp.c  is-openable.c  mkstemp.c  msghdr-client.c  msghdr-common.h  msghdr-server.c  notifier.cpp  random-reader.cpp  read-stdin.c  reader.cpp  reader.h  scanf.c  scm-recv.c  scm-send.c  scm.h  sigio-refine.c  sigio.c  ss.cpp  ws-client.js
memory/: a.h  double_free.cpp  extern.cpp  makefile
memory/export/: a.cpp  a.h  b.cpp  makefile
meta/: enable_if.cpp  is-invocable.cpp
meta-programming/: enable_if.cpp
multicast/: .gitignore  common.c  common.h  helper.sh  makefile  receiver  receiver.c  sender  sender.c
num/: define-negative.c  double2string.cpp  fcvt.c  ieee754-float.c  int_overflow.c  integer2double.cpp  neg.c  pointer-compare.c
process/: fork-bomb.c  fork.c  how-many-spawns.c  thread_specific.cpp  zombie.c  zoobie.c
ptrace/: common.h  dummy  dummy.c  ptrace-syscall.c  trace-syscall.c
pty/: .gitignore  fork.c  fork.h  master_open.c  master_open.h  script.c
signal/: waitpid.c
socket/: .gitignore  Android.mk  Application.mk  arp-demo.c  codec.cpp  codec.h  collector.cpp  collector.h  connection.cpp  create-service.sh  dns-demo.c  group.cpp  logger.cpp  logger.h  makefile  network.h  secure.cpp  secure.h  select_test.c  server.cpp  tool.cpp  tool.h
socket/keepalive/: client.c  common.h  server.c
socket/monitor/: CMakeLists.txt  base.cpp  base.h  callback.cpp  callback.h  common.h  coordinator.cpp  coordinator.h  endpoint.h  file_watcher.cpp  file_watcher.h  fs.cpp  fs.h  listener.cpp  listener.h  loop.h  message.cpp  message.h  nocopy.h  pipe.cpp  pipe.h  proc_monitor.cpp  proc_monitor.h  runner.cpp  runner.h  signal_fd.cpp  signal_fd.h  sock.cpp  sock.h  state.h  status.h  time_wheel.h  timer.cpp  timer.h  util.cpp  util.h  worker.cpp  worker.h
socket/monitor/debug/: debug-forwarder.txt
socket/monitor/examples/: forwarder.cpp  forwarder.h
socket/monitor/export/: CMakeLists.txt  build_helper.sh  export.cpp  export.h
socket/monitor/scripts/: build.sh
socket/monitor/tests/: test.h  test_coordinator.cpp  test_file_watcher.cpp  test_fork.cpp  test_listener_client.cpp  test_listener_server.cpp  test_poll.cpp  test_proc_monitor.cpp  test_reuseport.cpp  test_timer.cpp  test_worker.cpp
string/: ddl_conv.c  dump_strings.c  id_decoder.c
structure/: binary-tree.h
system/: debug-invoke.txt  fork_dont_care.c  getpwuid_r.c  invoke.c
time/: now.c  now.h
trivial/: 2d-array.c  StringBuilder.cpp  algorithm-sort.cpp  array-ptr.c  array.c  backslash.c  bitmap.cpp  bitmap.s  char-to-int.c  cmd-buffer.c  counter.cpp  delete.cpp  endian.cpp  goto-test.cpp  haszero.cpp  iterator-test.cpp  itos.c  kernel-o1-schedule.c  kill_test.cpp  long.c  move-test.cpp  mul.c  name_codec.c  neg.c  new-from-extern-buffer.cpp  precedence.c  print-vector.cpp  putenv.cpp  quorum_vote.c  read_val.c  read_val.cpp  ring_buffer.c  seq_macro.c  shift.cc  string.cpp  strtok.c  ternary-operator.c  ternary_op.cpp  union-var.cc  wchar_t.c  (+1 more)
trivial/macro/: a.cpp  a.h  debug.cpp  makefile
tty/: tcflush.c  utility.c  utility.h
vector/: ctor.cc
